turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: value update is not a member of java.awt.Color
		if (getCouleurSol()=colors(c)) {
                    ^Turmite:11: error: reassignment to val
			state=NextState(state, c, rule);
                             ^Turmite:12: error: reassignment to val
			c=colors.length
                         ^Turmite:14: error: reassignment to val
		c=c+1
                 ^Turmite:27: error: not found: value r
	setCouleurSol(colors(r))
                             ^